# espresso

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/models/: test_alpha_modes.gltf  test_animation.gltf  test_cube.gltf  test_cube_ground.gltf  test_double_sided.gltf  test_draw_sort.gltf  test_hierarchy.gltf  test_texture_transform.gltf
assets/scenes/: stress_grid.gltf
benchmarks/: CMakeLists.txt  bench_baseline.c  bench_baseline.h  bench_main.c  bench_paths.h  bench_stats.c  bench_stats.h  bench_target.c  bench_target.h  bench_window.c  bench_window.h  scenario.h  scenario_clear.c  scenario_gltf.c  scenario_gltf_instanced.c  scenario_sphere.c
examples/: CMakeLists.txt
examples/common/: camera.c  camera.h  wsi.c  wsi.h
examples/gltf/: main.c
examples/hello_vk/: main.c
examples/quad/: main.c
examples/sphere/: main.c
examples/triangle/: main.c
scripts/: download_damaged_helmet.sh  download_rigged_simple.sh  gen_stress_scene.py  gen_test_cube.py  gen_test_cube_ground.py
